# LogicCore

./: .gitignore  .gitmodules
.devcontainer/: Dockerfile  build.bash  devcontainer.json  docker-compose.yml  test.Dockerfile
.github/workflows/: docker_auto_build_push.yml
src/example_py/: package.xml  setup.py
src/example_py/example_py/: node.py
src/keyboard_control/: package.xml  setup.py
src/keyboard_control/keyboard_control/: keyboard_cmd_node.py
src/location/: CMakeLists.txt  package.xml
src/location/config/: slam_toolbox.yaml
src/location/launch/: toolbox_location.launch.py
src/my_perception/: CMakeLists.txt  package.xml
src/my_perception/config/: ekf.yaml  segmentation_params.yaml
src/my_perception/launch/: ekf.launch.py  imu_transform.launch.py  pointcloud_to_laserscan.launch.py  segmentation.launch.py
src/my_perception/scripts/: EFK.py  icp_without_yaw.py  kalman_node.py  sick_get.py  slam.py
src/my_perception/src/: imu_transform.cpp
src/nav_plugin/costmap_ultra/: CMakeLists.txt  costmap_intensity.xml  package.xml
src/pcl_handle/: CMakeLists.txt  README.md  package.xml
src/pcl_handle/config/: config.json  filter.json  icp.json  map.json
src/pcl_handle/include/: pch.hpp  pcl_handle.hpp  pcl_icp.hpp
src/pcl_handle/include/3rd_packages/: format_eigen.hpp
src/pcl_handle/include/pcl_common/: pcl_base.hpp  pcl_factory.hpp  pcl_feature.hpp  pcl_filter.hpp  pcl_implementation_ros.hpp  pcl_interface.hpp  pcl_recognition.hpp  pcl_registration.hpp  pcl_visual.hpp
src/pcl_handle/launch/: icp.launch.py  pcl_basket.launch.py  pcl_filter.launch.py
src/pcl_handle/src/: pcl_handle.cpp  pcl_icp.cpp
src/pcl_handle/src/pcl_common/: pcl_base.cpp  pcl_factory.cpp  pcl_feature.cpp  pcl_filter.cpp  pcl_implementation_ros.cpp  pcl_recognition.cpp  pcl_registration.cpp  pcl_visual.cpp
src/python_pkg/: package.xml  setup.py
src/python_pkg/python_pkg/: imu_analysis.py  imu_transform.py  message_filter_test.py  node.py
src/rc_navigation/: CMakeLists.txt  README.md  package.xml
src/rc_navigation/bt_tree/: simple_bt.xml
src/rc_navigation/config/: nav2_params.yaml  nav2_params_real.yaml
src/rc_navigation/launch/: main.launch.py  map_server.launch.py  navigation.launch.py  rc_nav.launch.py  rc_nav_sim.launch.py
src/rc_navigation/map/: court_map.yaml  empty_map.pgm  empty_map.yaml  map.yaml  my_map.pgm
(+9 files in other folders)
